--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 BACKEND_ENDPOINT=http://localhost:3000
 CORS_ORIGINS=http://localhost:8080,http://localhost:8081,http://localhost:3000
-DATABASE_URL=postgresql://rc@nhsf-db/nhsf_backend
+DATABASE_URL=postgresql://chapter@chapter-db/chapter_backend
 ENVIRONMENT=local
 FRONTEND_ENDPOINT=http://localhost:9001
 LOGLEVEL="WARNING"
