--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ rsa = "^4.9"
 requests = "^2.31.0"
 pem = "^23.1.0"
 sqlakeyset = "^2.0.1706067133"
+python-jose = "^3.3.0"
+passlib = "^1.7.4"
+python-multipart = "^0.0.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7"
