--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 ACCESS_TOKEN_EXPIRE_MINUTES=300
 ALGORITHM=HS256
 BACKEND_ENDPOINT=http://localhost:3000
-CORS_ORIGINS=http://localhost:8080,http://localhost:8081,http://localhost:3000
+CORS_ORIGINS=*
 DATABASE_URL=postgresql://chapter@chapter-db/chapter_backend
 ENVIRONMENT=local
 FRONTEND_ENDPOINT=http://localhost:9001
